Changed README.md. Fixed clipping at bottom.

--- a/webapp/deckr/static/deckr/scss/index.scss
+++ b/webapp/deckr/static/deckr/scss/index.scss
@@ -44,6 +44,7 @@ h2 {
     border-bottom: 1px solid #999;
     @include box-shadow(lighten(#000, 70%) 10px 10px 15px);
     @include border-radius(5px);
+    height: 80%;
 
     .header {
         padding-bottom: 5px;
@@ -104,7 +105,8 @@ h2 {
 }
 
 .vertical-fan {
-    height: 350px;
+    height: 77%;
+
 }
 
 .vertical-fan img {
@@ -124,4 +126,8 @@ h2 {
 .selected {
     border: solid;
     border-color: yellow;
+}
+
+#region2 {
+	height: 77%;
 }
